// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`standalone-single-spa-webpack-plugin basic-parcel 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap"
            src="https://react.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-parcel": "/main.js",
    "foo": "/foo.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      Promise.all([import('single-spa'), import('basic-parcel')]).then(function (values) {
        const singleSpa = values[0];
        const parcelConfig = values[1];
        const parcelContainer = document.createElement('div');
        parcelContainer.id = 'parcel-container';
        document.body.appendChild(parcelContainer);
        singleSpa.mountRootParcel(parcelConfig, { domElement: parcelContainer, name: 'basic-parcel' });
      });
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin basic-usage 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap"
            src="https://react.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js",
    "foo": "/foo.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin customProps option 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs
                               show-when-local-storage="devtools"
    >
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {"hi":"there"}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin disabled import-map-overrides 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin import-map-overrides with local storage key 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin multiple import map urls 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap"
            src="https://react.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap"
            src="https://vue.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin public path 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap"
            src="https://react.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap"
            src="https://vue.microfrontends.app/importmap.json"
    >
    </script>
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/testpublicpath/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin startOptions option 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="injector-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/esm/single-spa.dev.js",
    "basic-usage": "/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="injector-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/@single-spa/import-map-injector">
    </script>
    <script>
      import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":false});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;

exports[`standalone-single-spa-webpack-plugin systemjs 1`] = `
<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script type="systemjs-importmap"
            src="https://react.microfrontends.app/importmap.json"
    >
    </script>
    <script type="systemjs-importmap"
            src="https://vue.microfrontends.app/importmap.json"
    >
    </script>
    <script type="systemjs-importmap">
      {
  "imports": {
    "single-spa": "https://cdn.jsdelivr.net/npm/single-spa/lib/system/single-spa.dev.js",
    "basic-usage": "/testpublicpath/main.js"
  }
}
    </script>
    <meta name="importmap-type"
          content="systemjs-importmap"
    >
    <script src="https://cdn.jsdelivr.net/npm/import-map-overrides/dist/import-map-overrides.js">
    </script>
    <import-map-overrides-full dev-libs>
    </import-map-overrides-full>
    <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/system.js">
    </script>
    <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/extras/amd.js">
    </script>
    <script>
      System.import('single-spa').then(function (singleSpa) {
  singleSpa.registerApplication({
    name: 'basic-usage',
    app: function () {
      return System.import('basic-usage');
    },
    activeWhen: ["/"],
    customProps: {}
  });
  if (!window.location.pathname.startsWith('/')) {
    singleSpa.navigateToUrl('/');
  }
  singleSpa.start({"urlRerouteOnly":true});
});
    </script>
  </head>
  <body>
  </body>
</html>
`;
